Fix zoom covering polaroid border: clip-path inset on img-wrap, show crop in admin

--- a/style.css
+++ b/style.css
@@ -1379,6 +1379,7 @@ a {
 
 .polaroid-img-wrap {
   overflow: hidden;
+  clip-path: inset(0);
   width: 100%;
   aspect-ratio: 4/3;
 }
@@ -3816,6 +3817,7 @@ html[data-cover-tex="suede"] .book__cover-front::after {
 
 .scrapbook__polaroid .polaroid-img-wrap {
   overflow: hidden;
+  clip-path: inset(0);
   width: 100%;
   aspect-ratio: 4/3;
 }
